@@ -10,7 +10,8 @@
   <sect3 id="rn-controlcenter-keyboard">
   <title>Keyboard Layouts</title>
 
-    <para>The Keyboard control panel can now show an on-screen preview of each keyboard layout. Just press the key on your keyboard to see how it will be recognised with the layout.
+    <para>Selecting a keyboard layout is now simpler with the Keyboard control panel. Just click Add to choose from a list 
+of international keyboard layouts. Before making your choice you can see the effect of key presses in the layout preview. The Layout Options section has also been reorganized as simpler list of choices.
 
     <figure id="rnscreenshot-controlpanel-keyboardlayouts">
       <title>Keyboard Preferences - Layouts</title>
@@ -18,7 +19,7 @@
           <mediaobject>
             <imageobject><imagedata fileref="&urlfiguresbase;figure-keyboard-properties+layout.png" format="PNG"/>
             </imageobject>
-          <textobject><phrase>The Layouts tab, in the Keyboard Preferences control panel, with a layout preview.</phrase></textobject>
+          <textobject><phrase>The Layouts tab, in the Keyboard Preferences control panel, while adding a new layout.</phrase></textobject>
         </mediaobject>
       </screenshot>
     </figure>
